--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bear Ninja Hunter</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <h1>Bear Ninja Hunter Game</h1>
+    <p id="welcomeMessage"></p>
+    <p id="gameResult"></p>
+    <script src="js/script.js"></script>
+</body>
+</html>
