--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bear Ninja Hunter</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css"> <!-- Link to the CSS file -->
 </head>
 <body>
     <h1>Bear Ninja Hunter Game</h1>
     <p id="welcomeMessage"></p>
     <p id="gameResult"></p>
-    <script src="js/script.js"></script>
+    <script src="js/script.js"></script> <!-- Link to the JavaScript file -->
 </body>
 </html>
